add WIP xml standard output